argocd/manifests/prod/argocd-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/whitelist-source-range: "211.58.0.0/16" # TODO: Set actual office CIDR "[208.0.114.5/32]"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.playbuilder.xyz
      secretName: argocd-prod-tls
  rules:
    - host: argocd.playbuilder.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
